# eth-essential-rs

./: Cargo.toml  README.md
elf/: riscv32im-succinct-zkvm-elf
lib/: Cargo.toml
lib/src/: account.rs  hash.rs  json.rs  lib.rs  mmr.rs  mmr_keccak.rs  mpt.rs  rlp.rs  storage.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  account-test.json  keccak-test.json
