[package]
name = "hdp-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
thiserror = "1.0"
starknet-types-core = { version = "0.1.5", features = ["hash"] }
serde = { version = "1.0", features = ["derive"] }
reth-trie = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false }
alloy-rpc-types-eth = { version = "0.3", default-features = false, features = [
    "serde",

] }
alloy-rlp = { version = "0.3.5", features = ["derive"] }
alloy-primitives = { version = "0.8.0", features = ["rlp"] }
reth-primitives = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false, features = [
    "std",
] }

# TODO: why existance of this doesn't makes any difference on perf
[patch.crates-io]
# This patch uses sha3 instead of tiny-keccak. Reduces cycle count for Keccak by 50%.
alloy-primitives = { git = "https://github.com/sp1-patches/alloy-core", branch = "patch-v0.8.3" }
