[package]
name = "hdp-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
thiserror = { workspace = true }
starknet-types-core = { workspace = true }
serde = { workspace = true }
reth-trie = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-trie = { workspace = true }
alloy-rlp = { workspace = true }
alloy-primitives = { workspace = true }
reth-primitives = { workspace = true }

# TODO: why existance of this doesn't makes any difference on perf
[patch.crates-io]
# This patch uses sha3 instead of tiny-keccak. Reduces cycle count for Keccak by 50%.
alloy-primitives = { git = "https://github.com/sp1-patches/alloy-core", branch = "patch-v0.8.3" }
